# sushigo-rl

./: .gitignore  AGENTS.md  README.md  environment.yml  main.tex  pyproject.toml  requirements.txt
artifacts/: final_config.json
artifacts/old/: final_config.json  final_vecnorm.pkl
docs/: RULES.md
prompts/: coach_system.txt  coach_user.txt  explain_system.txt  explain_user.txt
results/: guanfang_best_20260316.md  repro_curriculum_1m.md
runs/: ablation_heuristic_only.vecnormalize.pkl  ablation_random_only.vecnormalize.pkl  guanfang_best_20260316.vecnormalize.pkl  repro_curriculum_1m.vecnormalize.pkl
runs/repro_curriculum_1m_checkpoints/: model_vecnormalize_1000000_steps.pkl  model_vecnormalize_100000_steps.pkl  model_vecnormalize_200000_steps.pkl  model_vecnormalize_300000_steps.pkl  model_vecnormalize_400000_steps.pkl  model_vecnormalize_500000_steps.pkl  model_vecnormalize_600000_steps.pkl  model_vecnormalize_700000_steps.pkl  model_vecnormalize_800000_steps.pkl  model_vecnormalize_900000_steps.pkl
src/sushigo_rl/: __init__.py  cli_play.py  env.py  eval.py  eval_curve.py  llm_assistant.py  llm_demo.py  llm_eval.py  llm_providers.py  rules.py  train.py
src/sushigo_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sushigo_rl/agents/: __init__.py  heuristic_agent.py  random_agent.py
tests/: test_env.py  test_llm_assistant.py  test_llm_providers.py  test_rules.py
